# licenses-deny

./: .gitignore  LICENSE  README.md  deny-rules.toml  licenses-deny.toml  pyproject.toml
.github/workflows/: build.yml
src/licenses_deny/: __init__.py  __main__.py  checks.py  cli.py  config.py  constants.py  loader.py  models.py  packages.py  utils.py
src/licenses_deny/data/: __init__.py  mapping.toml
