[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "licenses-deny"
version = "0.1.2"
description = "A Python package that audits package licenses and provenance against user-defined allow/deny policies."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = ["license", "compliance", "dependencies"]
classifiers = [
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
]
dependencies = [
    "packaging>=23.2",
]

[project.urls]
"Issue Tracker" = "https://github.com/John2416/licenses-deny/issues"
Source = "https://github.com/John2416/licenses-deny"

[project.scripts]
licenses-deny = "licenses_deny.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"licenses_deny" = ["data/*.toml"]
